[package]
name = "hello-wasi-http"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:hello-wasi-http"
proxy = true

[package.metadata.component.dependencies]

[package.metadata.component.target] 
package = "wasi:http" 
version = "0.2.0" 
world = "proxy"
